src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 110, 191, 238, 0.6;
  --background-end-rgb: 110, 191, 238, 0.8;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-end-rgb: 0, 0, 0;
    --background-start-rgb: 110, 191, 238;
  }
}

body {
  width:100%;
  overflow-x: hidden;
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

.bubble{
  width: 250px;
  height: 250px;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  box-shadow: inset 20px 20px 20px rgba(0,0,0,0.05),
              25px 35px 20px rgba(0,0,0,0.05),
              25px 20px 20px rgba(0, 0, 0, 0.05),
              inset 25px 30px 30px rgba(255,255,255,0.9);
  animation: slide 1s linear;
}
@keyframes slide{
  0%{
      opacity: 0;
  }
  100%{
      opacity: 1;
  }
}
.bubble#one{
  border-radius: 67% 33% 28% 72% / 59% 52% 58% 41% ;
  margin: 0 0 30px 0;
}
.bubble#two{
  border-radius: 45% 60% 18% 52% / 59% 52% 48% 41% ;
  margin: 0 0 30px 0;
}
.bubble#three{
  border-radius: 27% 50% 28% 72% / 59% 52% 48% 41% ;
  margin: 0 30px 30px 0;
}
.bubble#four{
  border-radius: 15% 55% 53% 47% / 55% 41% 59% 45%  ;
  margin: 0 0 30px 0;
}
.bubble:hover {
  /* white gradient bg */
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    );
}
.bubble::before{
  content: '';
  position: absolute;
  width: 35px;
  height: 35px;
  background-color: #ffffffc8;
  top: 40px;
  right: 30px;
  border-radius: 50%;
  opacity: 0.8;
}
.bubble::after{
  content: '';
  position: absolute;
  width: 15px;
  height: 15px;
  background-color: #ffffffc8;
  top: 30px;
  right: 60px;
  border-radius: 50%;
  opacity: 0.8;
}
.bubble .content{
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  flex-direction: column;
  padding: 50px 20px;
  z-index: 10;
}
.bubble .content h2{
  position: relative;
  height: 60px;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 1.5em;
  color: var(--clr);
}
.bubble .content a{
  position: relative;
  padding: 10px 20px;
  background-color: var(--clr);
  border-radius: 20px;
  color: #fff;
  text-shadow: 2px 5px 5px rgba(255,255,255,0.5);
  cursor: pointer;
  transition: background-color 0.5s, color 0.5s;
  box-shadow: inset 2px 5px 10px rgba(0,0,0,0.1),
              inset -2px -5px 10px rgba(255,255,255,0.1),
              10px 10px 5px rgba(0,0,0,0.05),
              10px 10px 5px rgba(0,0,0,0.25);
}
.bubble .content a:hover{
  background-color: #fff;
  color: var(--clr);
}

@media only screen and (max-width:800px) {
  .bubble{
      width: 235px;
      height: 235px;
  }
}
@media only screen and (max-width:600px) {
  .bubble{
      flex-direction: column;
  }
}

